refactor: update link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="conteiner">
     <div class="header">
       <div class="photo">
-        <img src="D:\Рабочий стол\foto.jpg" alt="foto" width="200px" height="300px">
+        <img src="foto.jpg" alt="foto" width="200px" height="300px">
       </div>
       <div class="author">
         <div class="info_box">
